--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <!--Section 1 -->
     <div style="background-color:antiquewhite; font-style: italic;">
         <h1>Ghizlane Essaidi</h1>
-        <p>I hold a bachelor's degree in computer science I wish to be expert in programming </p>
+        <p>I hold a bachelor's degree in computer science I wish to be an expert in programming </p>
         <img width="300" src="https://images.pexels.com/photos/1591061/pexels-photo-1591061.jpeg?auto=compress&cs=tinysrgb&w=600" alt="hello">  
     
     </div>
